# minesweeper

./: CMakeLists.txt  README.md  compile.bat  leaderboard.txt  main.cpp
build-win/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
